[tool.poetry]
name = "fast-api-resume"
version = "0.1.0"
description = "API for building resumes"
authors = ["Gil Blinov <gil.blinov@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "fast_api_resume"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
google-cloud-firestore = "^2.11.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
